--- a/reactathon/src/stylesheets/main.scss
+++ b/reactathon/src/stylesheets/main.scss
@@ -1,36 +1,21 @@
-.hero {
-  background-image: url('https://i.imgur.com/I0HjXr0.gif');
-  background-size: cover;
-  background-position: center;
+@import './HomePage/hero.scss';
+@import './HomePage/navbar.scss';
 
-  .hero-body > .container > .hero-heading {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-shadow: 5px 5px 10px black;
-    font-weight: bolder;
-  }
+@import './HeroDirectory/heroIndex.scss';
+@import './HeroDirectory/heroCard.scss';
+@import './ExternalLinks/externalLinks.scss';
+
+@import './DisplayHero/heroProfile.scss';
+
+@import './HeroBattles/singlePlayer.scss';
+@import './HeroBattles/singlePlayerCard.scss';
+
+* {
+  box-sizing: border-box;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 section {
-  height: 95vh;
+  height: 90vh;
   overflow-y: scroll;
-}
-
-iframe {
-  border: 2px solid blue;
-}
-
-.hero-index {
-  background-image: url('https://media3.giphy.com/media/dAWZiSMbMvObDWP3aA/giphy.gif');
-  background-size: cover;
-  background-position: center; 
-}
-
-.hero-card {
-  opacity: 1;
-}
-
-.hero-battle {
-  background-image: url('https://www.cultjer.com/img/ug_photo/2015_08/16183820150828125110.jpg');
-  background-size: cover;
-  background-position: center;
 }
