--- a/reactathon/src/stylesheets/HeroDirectory/heroCard.scss
+++ b/reactathon/src/stylesheets/HeroDirectory/heroCard.scss
@@ -1,5 +1,16 @@
 .hero-card {
-  opacity: 1;
+  border-radius: 0px 0px 15px 15px;
+
+  .card-content {
+    background-color: yellow;
+    color: black;
+    border-radius: 0px 0px 15px 15px;
+    
+    h1 {
+      font-weight: bolder;
+      text-align: center;
+    }
+  }
 
   &:hover {
     box-shadow: 0px 0px 10px 10px springgreen;
